--- a/index.Rmd
+++ b/index.Rmd
@@ -21,13 +21,14 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Welcome to the homepage for __Dynamic and Reproducible Reports Using Eviews, R and R Markdown__
 
+<br><br>
 
-In order to read more about me, please visit my [Blog](https:sagirmati.blogspot.com), which I created purposely for those interested in learning Dynamic and Reproducible reports using __Eviews, R and R Markdown__.
+In order to read more about me, please  [visit my Blog](https:smatiacademy.blogspot.com), which I created purposely for those interested in learning Dynamic and Reproducible reports using __Eviews, R and R Markdown__.
 
 Please feel free to post questions, comments, suggestions and/or corrections on the __Blog__.
 
 
-<br><br><br><br>
+<br><br>
 
 
 __Sagiru Mati,__ 
