--- a/Introduction/index.Rmd
+++ b/Introduction/index.Rmd
@@ -46,11 +46,13 @@ If you follow __this blog__, I will walk you through the following:
 
 1. How to integrate Eviews, R, and R Markdown. That is running Eviews program from another application.
 
-1. Tricks to produce __html, pdf and docx__ outputs from one source file of __R Markdown__. If you learn R Markdown, you are likely to burn all our \(\LaTeX\) distributions and other authoring (typesetting) applications.
+1. Tricks to produce __html, pdf and docx__ outputs from one source file of __R Markdown__. If you learn R Markdown, you are likely to burn all your Latex  ($\LaTeX$) distributions and other authoring (typesetting) applications.
 
-1. Step by step guide to develop an R package that can integrate Eviews R, and R Markdown.
+1. Learn how to automatically format tables, graphs and text in your html, pdf and docx documents. Imagine controlling and formatting (bold, italic,centering) all tables in your docx file by pressing some keys like `ctrl+T`
 
-1. Learn how to work with version control system, specifically [github](https://www.github.com). Therefore, you longer have to be saving your files with various names (such as update1, update2,final version, final version2 and so on)
+1. Step by step guide to develop an R package that can integrate Eviews, R, and R Markdown.
+
+1. Learn how to work with version control system, specifically [github](https://www.github.com). Therefore, you __no longer__ have to be saving your files with various names (such as update1, update2, final version, final version2 and so on)
 
 1. In addtion to this, I will make sure that followers of this blog learn how to set up a blog and a webpage like this, where you have all your codes, tables, graphs and explanation in one place.
 
@@ -65,7 +67,7 @@ Dynamic report means that every part of your report is linked to other parts, an
 
 The research community are not only inerested in the research results, but also the reproducibility of results. The world has changed from asking "**Please, how did you do it?**" to "**Please give me the code**". Reproducible report simply means that everyone can generate (reproduce) your report exactly, given that they have access to and can run your __code__ on their machine successfuly.
 
-I think it is a good idea to give an example using the Map of west Africa. I believe it will be difficult, if not impossible, to reproduce the following map exactly if people do not have access to the __code__ that produces it. It will take a lot of effort, time and energy to produce something close to the map shown in Figure \@ref(fig:ECOWAS)
+I think it is a good idea to give an example using the map of West Africa. I believe it will be difficult, if not impossible, to reproduce the following map exactly if people do not have access to the __code__ that produces it. It will take a lot of effort, time and energy to produce something close to the map shown in Figure \@ref(fig:ECOWAS)
 .
 
 <br><br>
@@ -83,7 +85,7 @@ legend("topleft",c("Niger","Nigeria","Ivory Coast","Burkina Faso","Benin","Sierr
 
 
 
-However it will take few seconds for everyone, depending on computer speed, to __reproduce__ the map if s/he uses the following sets of __code__.
+However it will take few seconds for everyone, depending on computer speed, to __reproduce__ the map (Figure \@ref(fig:ECOWAS)) if s/he uses the following sets of __code__.
 
 
 <br><br>
@@ -99,7 +101,7 @@ legend("topleft",c("Niger","Nigeria","Ivory Coast","Burkina Faso","Benin","Sierr
 
 <br><br>
 
-What do you think if you get some corrections/suggestions to modify the color legend of some or all of the countries on the map of Figure \@ref(fig:ECOWAS1)
+What do you think if you get some corrections/suggestions to modify the color legend(s) of some or all of the countries on the map in Figure \@ref(fig:ECOWAS1)
 , for example:
 
 
@@ -142,7 +144,7 @@ legend("topleft",c("Niger","Nigeria","Ivory Coast","Burkina Faso","Benin","Sierr
 <br><br>
 
 
-Figures \@ref(fig:ECOWAS) and \@ref(fig:ECOWAS1) show how creating map of west Africa is **Dynamic and Reproducible**.
+Figures \@ref(fig:ECOWAS) and \@ref(fig:ECOWAS1) show how creating map of West Africa is **Dynamic and Reproducible**.
 
 
 <br><br>
@@ -157,7 +159,7 @@ Therefore it is good to make your report dynamic and reproducible.
 
 # Tools for Dynamic and Reproducible Reports
 
-To some extent, \(\LaTeX\),  __Microsoft Office Word__, __LibreOffice__ and  __OpenOffice__ can make reports __dynamic and reproducible__. However, their capacity is limited as they make no provisions for `inline codes`.
+To some extent, Latex ($\LaTeX$),  __Microsoft Office Word__, __LibreOffice__ and  __OpenOffice__ can make reports __dynamic and reproducible__. However, their capacity is limited as they make no provisions for `inline codes`.
 
 Other tools of dynamic and reproducible reports include SASDown by _Statistical Analysis Software_ ([SAS](https://www.sas.com)), _Stata Markdown_ introduced in [Stata](https://www.stata.com) 16. The limitations of these tools include inability to work (communicate) with other programming languages or statistical softwares. For example, Stata cannot work in tandem with SAS or C++ to make dynamic and reproducible reports, and the reverse is true.
 
