--- a/index.Rmd
+++ b/index.Rmd
@@ -25,7 +25,7 @@ Welcome to the homepage for __Dynamic and Reproducible Reports Using Eviews, R a
 
 <br><br>
 
-In order to read more about me, please  [visit my Blog](https:smatiacademy.blogspot.com), which I created purposely for those interested in learning Dynamic and Reproducible reports using __Eviews, R and R Markdown__.
+In order to read more about me, please  [visit my Blog](https://smatiacademy.blogspot.com), which I created purposely for those interested in learning Dynamic and Reproducible reports using __Eviews, R and R Markdown__.
 
 Please feel free to post questions, comments, suggestions and/or corrections on the __Blog__.
 
